{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 67,
  "lineage": "e661441b-9720-5c8b-7241-6d3fe03187d7",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_proj_1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:loadbalancer/app/dev-proj-1-alb/2d33ef402f2bd354",
            "arn_suffix": "app/dev-proj-1-alb/2d33ef402f2bd354",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-proj-1-alb-1649870251.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:527397543025:loadbalancer/app/dev-proj-1-alb/2d33ef402f2bd354",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-proj-1-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d17ddee57c8c3592"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a6d78d16bbb55b38"
              },
              {
                "subnet_id": "subnet-0dd29ac553f5fa45e"
              }
            ],
            "subnets": [
              "subnet-0a6d78d16bbb55b38",
              "subnet-0dd29ac553f5fa45e"
            ],
            "tags": {
              "Name": "example-lb"
            },
            "tags_all": {
              "Name": "example-lb"
            },
            "vpc_id": "vpc-0c5cc865c45edf695",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:loadbalancer/app/dev-proj-1-alb/2d33ef402f2bd354"
          },
          "dependencies": [
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_proj_1_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:listener/app/dev-proj-1-alb/2d33ef402f2bd354/0c5f1a12287a2176",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:527397543025:listener/app/dev-proj-1-alb/2d33ef402f2bd354/0c5f1a12287a2176",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:loadbalancer/app/dev-proj-1-alb/2d33ef402f2bd354",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:listener/app/dev-proj-1-alb/2d33ef402f2bd354/0c5f1a12287a2176"
          },
          "dependencies": [
            "module.alb.aws_lb.dev_proj_1_lb",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0de568ccf3b0080d9",
            "arn": "arn:aws:ec2:us-east-1:527397543025:instance/i-02e0f8f5837267384",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-ssm-profile",
            "id": "i-02e0f8f5837267384",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b31f22c96b85fd8"
              }
            ],
            "primary_network_interface_id": "eni-08b31f22c96b85fd8",
            "private_dns": "ip-10-0-1-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.203",
            "public_ip": "3.238.0.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:527397543025:key/eaa5e84d-3daf-40ed-806b-74491411471f",
                "throughput": 125,
                "volume_id": "vol-0170b3e0aaef7b570",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6d78d16bbb55b38",
            "tags": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Ubuntu Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0a979de86ebc586ee",
              "sg-0d17ddee57c8c3592"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "i-02e0f8f5837267384",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.jenkins.aws_iam_instance_profile.jenkins_ec2_profile",
            "module.jenkins.aws_iam_role.jenkins_ec2_role",
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_proj_1_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:527397543025:loadbalancer/app/dev-proj-1-alb/2d33ef402f2bd354"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_proj_1_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd,i-02e0f8f5837267384,8080",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
            "target_id": "i-02e0f8f5837267384"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:527397543025:targetgroup/jenkins-lb-target-group/5e0fdc82d40b34bd",
            "target_id": "i-02e0f8f5837267384"
          },
          "dependencies": [
            "module.jenkins.aws_iam_instance_profile.jenkins_ec2_profile",
            "module.jenkins.aws_iam_role.jenkins_ec2_role",
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.dev_proj_1_lb_target_group",
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:internet-gateway/igw-02df71cfe01491628",
            "id": "igw-02df71cfe01491628",
            "owner_id": "527397543025",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "igw-02df71cfe01491628",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:route-table/rtb-0ebe741ea268a0687",
            "id": "rtb-0ebe741ea268a0687",
            "owner_id": "527397543025",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "jenkins-private-rt"
            },
            "tags_all": {
              "Name": "jenkins-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtb-0ebe741ea268a0687",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:route-table/rtb-0a610b41bfd88f639",
            "id": "rtb-0a610b41bfd88f639",
            "owner_id": "527397543025",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02df71cfe01491628",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-public-rt"
            },
            "tags_all": {
              "Name": "jenkins-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtb-0a610b41bfd88f639",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.jenkins_public_internet_gateway",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052718ce43842b80e",
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe741ea268a0687",
            "subnet_id": "subnet-0ad66140752356d1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtbassoc-052718ce43842b80e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.jenkins_private_subnets",
            "module.networking.aws_subnet.jenkins_private_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0510200488200235a",
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe741ea268a0687",
            "subnet_id": "subnet-0f24d0bd219ecf02f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtbassoc-0510200488200235a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.jenkins_private_subnets",
            "module.networking.aws_subnet.jenkins_private_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc089a845f33cdf1",
            "region": "us-east-1",
            "route_table_id": "rtb-0a610b41bfd88f639",
            "subnet_id": "subnet-0a6d78d16bbb55b38"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtbassoc-0bc089a845f33cdf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.jenkins_public_internet_gateway",
            "module.networking.aws_route_table.jenkins_public_route_table",
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076e240ce27f312a1",
            "region": "us-east-1",
            "route_table_id": "rtb-0a610b41bfd88f639",
            "subnet_id": "subnet-0dd29ac553f5fa45e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "rtbassoc-076e240ce27f312a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.jenkins_public_internet_gateway",
            "module.networking.aws_route_table.jenkins_public_route_table",
            "module.networking.aws_subnet.jenkins_public_subnets",
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:subnet/subnet-0ad66140752356d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad66140752356d1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "527397543025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-private-subnet-1"
            },
            "tags_all": {
              "Name": "jenkins-private-subnet-1"
            },
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "subnet-0ad66140752356d1e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:subnet/subnet-0f24d0bd219ecf02f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f24d0bd219ecf02f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "527397543025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-private-subnet-2"
            },
            "tags_all": {
              "Name": "jenkins-private-subnet-2"
            },
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "subnet-0f24d0bd219ecf02f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:subnet/subnet-0a6d78d16bbb55b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6d78d16bbb55b38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "527397543025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-public-subnet-1"
            },
            "tags_all": {
              "Name": "jenkins-public-subnet-1"
            },
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "subnet-0a6d78d16bbb55b38",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:subnet/subnet-0dd29ac553f5fa45e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd29ac553f5fa45e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "527397543025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-public-subnet-2"
            },
            "tags_all": {
              "Name": "jenkins-public-subnet-2"
            },
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "subnet-0dd29ac553f5fa45e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc_us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:vpc/vpc-0c5cc865c45edf695",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc4168c3ab57576f",
            "default_route_table_id": "rtb-09d95ea8bebfd0137",
            "default_security_group_id": "sg-0544e490975e4a577",
            "dhcp_options_id": "dopt-00f9e6cbf93cc34b1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5cc865c45edf695",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d95ea8bebfd0137",
            "owner_id": "527397543025",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-proj-jenkins-us-east-1-vpc"
            },
            "tags_all": {
              "Name": "dev-proj-jenkins-us-east-1-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "vpc-0c5cc865c45edf695",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:security-group/sg-0a979de86ebc586ee",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-0a979de86ebc586ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "527397543025",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "sg-0a979de86ebc586ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527397543025:security-group/sg-0d17ddee57c8c3592",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d17ddee57c8c3592",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "527397543025",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cc865c45edf695"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "527397543025",
            "id": "sg-0d17ddee57c8c3592",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.jenkins_vpc_us_east_1"
          ]
        }
      ]
    }
  ]
}